added dtos and improve html canvas